Migrated DBvolution10 codebase to DBvolution 2.0.0