@@ -15,6 +15,9 @@
  */
 package nz.co.gregs.dbvolution.datatypes;
 
+import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
 import java.util.List;
@@ -37,14 +40,16 @@ import org.apache.commons.logging.LogFactory;
  *
  * @author Malcolm Lett
  */
-public class QueryableDatatypeSyncer {
+public class QueryableDatatypeSyncer implements Serializable {
 
-	private static final Log log = LogFactory.getLog(QueryableDatatypeSyncer.class);
+	private static final long serialVersionUID = 1l;
+
+	private static final Log LOG = LogFactory.getLog(QueryableDatatypeSyncer.class);
 
 	private final String propertyName;
-	private final DBTypeAdaptor<Object, Object> typeAdaptor;
-	private final Class<? extends QueryableDatatype> internalQdtType;
-	private QueryableDatatype internalQdt;
+//	private final DBTypeAdaptor<Object, Object> typeAdaptor;
+	private final Class<? extends QueryableDatatype<?>> internalQdtType;
+	private QueryableDatatype<?> internalQdt;
 	private SafeOneWaySimpleTypeAdaptor toExternalSimpleTypeAdaptor;
 	private SafeOneWaySimpleTypeAdaptor toInternalSimpleTypeAdaptor;
 
@@ -58,7 +63,7 @@ public class QueryableDatatypeSyncer {
 	 */
 	public QueryableDatatypeSyncer(
 			String propertyName,
-			Class<? extends QueryableDatatype> internalQdtType,
+			Class<? extends QueryableDatatype<?>> internalQdtType,
 			Class<?> internalQdtLiteralType,
 			Class<?> externalSimpleType,
 			DBTypeAdaptor<Object, Object> typeAdaptor) {
@@ -66,7 +71,7 @@ public class QueryableDatatypeSyncer {
 			throw new DBRuntimeException("Null typeAdaptor was passed, this is an internal bug");
 		}
 		this.propertyName = propertyName;
-		this.typeAdaptor = typeAdaptor;
+//		this.typeAdaptor = typeAdaptor;
 		this.internalQdtType = internalQdtType;
 		this.toExternalSimpleTypeAdaptor = new SafeOneWaySimpleTypeAdaptor(propertyName,
 				typeAdaptor, Direction.TO_EXTERNAL, internalQdtLiteralType, externalSimpleType);
@@ -75,13 +80,11 @@ public class QueryableDatatypeSyncer {
 				typeAdaptor, Direction.TO_INTERNAL, externalSimpleType, internalQdtLiteralType);
 
 		try {
-			this.internalQdt = internalQdtType.newInstance();
+			this.internalQdt = internalQdtType.getConstructor().newInstance();
 		} catch (InstantiationException e) {
-			// TODO produce a better error message that is consistent with how this is handled elsewhere
 			throw new DBRuntimeException("Instantiation error creating internal "
 					+ internalQdtType.getSimpleName() + " QDT: " + e.getMessage(), e);
-		} catch (IllegalAccessException e) {
-			// TODO produce a better error message that is consistent with how this is handled elsewhere
+		} catch (IllegalAccessException | NoSuchMethodException | SecurityException|IllegalArgumentException | InvocationTargetException e) {
 			throw new DBRuntimeException("Access error creating internal "
 					+ internalQdtType.getSimpleName() + " QDT: " + e.getMessage(), e);
 		}
@@ -91,12 +94,9 @@ public class QueryableDatatypeSyncer {
 	 * supplies the QDT used internally, that is the QDT the represents the
 	 * database's view of the data.
 	 *
-	 * <p style="color: #F90;">Support DBvolution at
-	 * <a href="http://patreon.com/dbvolution" target=new>Patreon</a></p>
-	 *
 	 * @return the internal QDT.
 	 */
-	public QueryableDatatype getInternalQueryableDatatype() {
+	public QueryableDatatype<?> getInternalQueryableDatatype() {
 		return internalQdt;
 	}
 
@@ -106,7 +106,7 @@ public class QueryableDatatypeSyncer {
 	 *
 	 * @param internalQdt	internalQdt
 	 */
-	public void setInternalQueryableDatatype(QueryableDatatype internalQdt) {
+	public void setInternalQueryableDatatype(QueryableDatatype<?> internalQdt) {
 		if (internalQdt != null && !internalQdt.getClass().equals(internalQdtType)) {
 			//throw new RuntimeException("Don't know what to do here: targetQdtType:"+internalQdt.getClass().getSimpleName()+" != "+internalQdtType+":"+internalQdtType.getSimpleName());
 			throw new ClassCastException("Cannot assign " + internalQdt.getClass().getSimpleName()
@@ -122,10 +122,9 @@ public class QueryableDatatypeSyncer {
 	 * @param externalQdt may be null
 	 * <p style="color: #F90;">Support DBvolution at
 	 * <a href="http://patreon.com/dbvolution" target=new>Patreon</a></p>
-	 *
 	 * @return the updated internal QDT
 	 */
-	public QueryableDatatype setInternalQDTFromExternalQDT(QueryableDatatype externalQdt) {
+	public QueryableDatatype<?> setInternalQDTFromExternalQDT(QueryableDatatype<?> externalQdt) {
 		if (externalQdt == null) {
 			internalQdt = null;
 		} else {
@@ -142,21 +141,21 @@ public class QueryableDatatypeSyncer {
 	 * @param externalQdt	externalQdt
 	 * <p style="color: #F90;">Support DBvolution at
 	 * <a href="http://patreon.com/dbvolution" target=new>Patreon</a></p>
-	 *
 	 * @return the updated external QDT or null if the internal QDT is null
 	 */
-	public QueryableDatatype setExternalFromInternalQDT(QueryableDatatype externalQdt) {
+	public QueryableDatatype<?> setExternalFromInternalQDT(QueryableDatatype<?> externalQdt) {
 		if (getInternalQueryableDatatype() == null) {
 			return null;
 		} else {
-			DBSafeInternalQDTAdaptor qdtAdaptor = new DBSafeInternalQDTAdaptor(externalQdt.getClass(), getToExternalSimpleTypeAdaptor());
+			@SuppressWarnings("unchecked")
+			DBSafeInternalQDTAdaptor qdtAdaptor = new DBSafeInternalQDTAdaptor((Class<? extends QueryableDatatype<?>>) externalQdt.getClass(), getToExternalSimpleTypeAdaptor());
 			qdtAdaptor.setTargetQDTFromSourceQDT(externalQdt, getInternalQueryableDatatype());
 		}
 		return externalQdt;
 	}
 
 	// for DEBUG purposes only
-	static String qdtToString(QueryableDatatype qdt) {
+	static String qdtToString(QueryableDatatype<?> qdt) {
 		String literalStr;
 		if (qdt == null) {
 			literalStr = null;
@@ -204,6 +203,25 @@ public class QueryableDatatypeSyncer {
 	}
 
 	/**
+	 *
+	 * @param internalQDT the internal QDT
+	 * @param internalValue the internal value
+	 */
+	protected static final void setQDTValueUsingDangerousReflection(QueryableDatatype<?> internalQDT, Object internalValue) {
+		try {
+			if (internalValue == null) {
+				internalQDT.setToNull();
+			} else {
+				Method method = internalQDT.getClass().getMethod("setValue", internalValue.getClass());
+				method.invoke(internalQDT, internalValue);
+			}
+		} catch (NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
+			throw new DBRuntimeException("Synchronisation Failed:" + ex.getMessage(), ex);
+		}
+
+	}
+
+	/**
 	 * One-shot cycle-aware recursive QDT adaptor. Converts from existing QDT to
 	 * brand new one, and copies from one QDT to another.
 	 *
@@ -219,10 +237,10 @@ public class QueryableDatatypeSyncer {
 	 */
 	public static class DBSafeInternalQDTAdaptor {
 
-		private final Class<? extends QueryableDatatype> targetQdtType;
+		private final Class<? extends QueryableDatatype<?>> targetQdtType;
 		private final SafeOneWaySimpleTypeAdaptor simpleTypeAdaptor;
-		private final List<Map.Entry<QueryableDatatype, QueryableDatatype>> observedSourcesAndTargets
-				= new ArrayList<Map.Entry<QueryableDatatype, QueryableDatatype>>();
+		private final List<Map.Entry<QueryableDatatype<?>, QueryableDatatype<?>>> observedSourcesAndTargets
+				= new ArrayList<>();
 
 		/**
 		 * Constructor
@@ -231,7 +249,7 @@ public class QueryableDatatypeSyncer {
 		 * @param typeAdaptor typeAdaptor
 		 */
 		public DBSafeInternalQDTAdaptor(
-				Class<? extends QueryableDatatype> targetQdtType,
+				Class<? extends QueryableDatatype<?>> targetQdtType,
 				SafeOneWaySimpleTypeAdaptor typeAdaptor) {
 			this.targetQdtType = targetQdtType;
 			this.simpleTypeAdaptor = typeAdaptor;
@@ -247,33 +265,32 @@ public class QueryableDatatypeSyncer {
 		 *
 		 * @param source the QDT to convert to the target type, may be null
 		 * <p style="color: #F90;">Support DBvolution at
-	 * <a href="http://patreon.com/dbvolution" target=new>Patreon</a></p>
-	 *
-	 * @return the newly created QDT of the target type, or null if
+		 * <a href="http://patreon.com/dbvolution" target=new>Patreon</a></p>
+		 * @return the newly created QDT of the target type, or null if
 		 * {@code source} was null
 		 */
 		public DBExpression convert(DBExpression source) {
-			if (!(source instanceof QueryableDatatype)) {
+			if (!(source instanceof QueryableDatatype<?>)) {
 				return source;
 			} else {
-				QueryableDatatype sourceQDT = (QueryableDatatype) source;
+				QueryableDatatype<?> sourceQDT = (QueryableDatatype<?>) source;
 				try {
 					// cycle-detection
 					// (note: important that it uses reference equality, not object equality)
-					for (Map.Entry<QueryableDatatype, QueryableDatatype> sourceAndTarget : observedSourcesAndTargets) {
+					for (Map.Entry<QueryableDatatype<?>, QueryableDatatype<?>> sourceAndTarget : observedSourcesAndTargets) {
 						if (sourceAndTarget.getKey() == sourceQDT) {
 							// re-use existing value
 							return sourceAndTarget.getValue();
 						}
 					}
 
-					QueryableDatatype targetQdt = newTargetQDT();
+					QueryableDatatype<?> targetQdt = newTargetQDT();
 					setTargetQDTFromSourceQDT(targetQdt, sourceQDT);
 
-					log.debug(simpleTypeAdaptor + " converting " + qdtToString(sourceQDT) + " ==> " + qdtToString(targetQdt));
+					LOG.debug(simpleTypeAdaptor + " converting " + qdtToString(sourceQDT) + " ==> " + qdtToString(targetQdt));
 					return targetQdt;
 				} catch (RuntimeException e) {
-					log.debug(simpleTypeAdaptor + " converting " + qdtToString(sourceQDT) + " ==> " + e.getClass().getSimpleName());
+					LOG.debug(simpleTypeAdaptor + " converting " + qdtToString(sourceQDT) + " ==> " + e.getClass().getSimpleName());
 					throw e;
 				}
 			}
@@ -288,7 +305,8 @@ public class QueryableDatatypeSyncer {
 		 * @param sourceQdt the QDT with values to convert and copy to the target
 		 * (must not be null)
 		 */
-		protected void setTargetQDTFromSourceQDT(QueryableDatatype targetQdt, QueryableDatatype sourceQdt) {
+		@SuppressWarnings("unchecked")
+		protected void setTargetQDTFromSourceQDT(QueryableDatatype<?> targetQdt, QueryableDatatype<?> sourceQdt) {
 			// sanity checks
 			if (!targetQdt.getClass().equals(targetQdtType)) {
 				throw new RuntimeException("Don't know what to do here: targetQdtType:"
@@ -297,13 +315,13 @@ public class QueryableDatatypeSyncer {
 
 			// cycle-detection
 			// (note: important that it uses reference equality, not object equality)
-			for (Map.Entry<QueryableDatatype, QueryableDatatype> soFarEntry : observedSourcesAndTargets) {
+			for (Map.Entry<QueryableDatatype<?>, QueryableDatatype<?>> soFarEntry : observedSourcesAndTargets) {
 				if (soFarEntry.getKey() == sourceQdt) {
 					// already observed, so already done.
 					return;
 				}
 			}
-			observedSourcesAndTargets.add(new SimpleEntry<QueryableDatatype, QueryableDatatype>(sourceQdt, targetQdt));
+			observedSourcesAndTargets.add(new SimpleEntry<QueryableDatatype<?>, QueryableDatatype<?>>(sourceQdt, targetQdt));
 
 			// copy simple fields
 			targetQdt.setChanged(sourceQdt.hasChanged());
@@ -320,10 +338,11 @@ public class QueryableDatatypeSyncer {
 			targetQdt.setColumnExpression(sourceQdt.getColumnExpression());
 
 			// copy literal value with translation
-			targetQdt.setLiteralValue(simpleTypeAdaptor.convert(sourceQdt.getLiteralValue()));
+			//targetQdt.setLiteralValue(simpleTypeAdaptor.convert(sourceQdt.getLiteralValue()));
+			setQDTValueUsingDangerousReflection(targetQdt, simpleTypeAdaptor.convert(sourceQdt.getLiteralValue()));
 
 			// copy previous value with translation
-			targetQdt.setPreviousValue((QueryableDatatype) convert(sourceQdt.getPreviousValue()));
+			targetQdt.setPreviousValue((QueryableDatatype) convert(sourceQdt.getPreviousValueAsQDT()));
 
 			// copy operator with translation
 			if (sourceQdt.getOperator() == null) {
@@ -334,15 +353,13 @@ public class QueryableDatatypeSyncer {
 		}
 
 		// factory method
-		private QueryableDatatype newTargetQDT() {
+		private QueryableDatatype<?> newTargetQDT() {
 			try {
-				return targetQdtType.newInstance();
+				return targetQdtType.getConstructor().newInstance();
 			} catch (InstantiationException e) {
-				// TODO produce a better error message that is consistent with how this is handled elsewhere
 				throw new DBRuntimeException("Instantiation error creating internal "
 						+ targetQdtType.getSimpleName() + " QDT: " + e.getMessage(), e);
-			} catch (IllegalAccessException e) {
-				// TODO produce a better error message that is consistent with how this is handled elsewhere
+			} catch (IllegalAccessException|NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException e) {
 				throw new DBRuntimeException("Access error creating internal "
 						+ targetQdtType.getSimpleName() + " QDT: " + e.getMessage(), e);
 			}
